--- a/coding-bootcamp-testimonials-slider-master/main.css
+++ b/coding-bootcamp-testimonials-slider-master/main.css
@@ -133,20 +133,20 @@ body {
         background: none;
     }
     .testimonial__info {
-        position: absolute;
+        position: relative;
         top: 25%;
-        left: 17.5%;
-        width: 42.5%;
-        font-size: 2rem;
+        left: 30%;
+        font-size: 1.5rem;
         line-height: 2.5rem;
         text-align: left;
     }
     .testimonial__title__wrapper {
-        position: absolute;
+        position: relative;
         top: 65%;
-        left: 17.5%;
+        left: 30%;
         margin-top: 1rem;
         margin-left: 1rem;
+        text-align: left;
     }
     .testimonial__title {
         font-size: 1.25rem;
